fix align button

--- a/styles.css
+++ b/styles.css
@@ -938,19 +938,19 @@ li.CodeMirror-hint-active {
 
 .save_btn_area {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   flex: 1;
   border-radius: 6px;
-  padding: 8px 16px;
-  text-align: left;
+  padding: 16px;
+  text-align: center;
   cursor: pointer;
   box-sizing: border-box;
   border: 1px solid #ccc;
-  gap: 20px;
+  gap: 8px;
   transition: filter 0.15s;
-  width: 97%;
+  width: 100%;
 }
 
 .save_btn_area:hover {
@@ -985,15 +985,16 @@ li.CodeMirror-hint-active {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
+  text-align: center;
 }
 
 #fs_load label {
-  flex: 1;
   display: flex;
-  flex-direction: column;
   width: 100%;
 }
 
 #fs_load .save_btn_area {
   flex: 1;
+  width: 100%;
 }
